--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,37 +2,310 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.8.2 64-bit' requires ipykernel package.\n",
-      "Run the following command to install 'ipykernel' into the Python environment. \n",
-      "Command: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall\n"
+    "import sqlite3\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "conn = sqlite3.connect('data/noshow.db')\n",
+    "df = pd.read_sql_query('SELECT * FROM noshow', conn)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no_show</th>\n",
+       "      <th>branch</th>\n",
+       "      <th>booking_month</th>\n",
+       "      <th>arrival_month</th>\n",
+       "      <th>arrival_day</th>\n",
+       "      <th>checkout_month</th>\n",
+       "      <th>checkout_day</th>\n",
+       "      <th>country</th>\n",
+       "      <th>first_time</th>\n",
+       "      <th>room</th>\n",
+       "      <th>price</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>num_adults</th>\n",
+       "      <th>num_children</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>July</td>\n",
+       "      <td>May</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>May</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>December</td>\n",
+       "      <td>February</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>March</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
+       "      <td>USD$ 723.34</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>December</td>\n",
+       "      <td>May</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>May</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>SGD$ 650.94</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>October</td>\n",
+       "      <td>September</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>September</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
+       "      <td>SGD$ 978.67</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>February</td>\n",
+       "      <td>February</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>February</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119386</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>October</td>\n",
+       "      <td>March</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>March</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>SGD$ 953.94</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119387</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>August</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>June</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>USD$ 636.84</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119388</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>January</td>\n",
+       "      <td>July</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>July</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119389</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>January</td>\n",
+       "      <td>May</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>May</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>USD$ 720.1</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119390</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>August</td>\n",
+       "      <td>June</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>June</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>SGD$ 898.62</td>\n",
+       "      <td>Phone</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>119391 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        no_show   branch booking_month arrival_month  arrival_day  \\\n",
+       "0           1.0   Changi          July           May         19.0   \n",
+       "1           0.0  Orchard      December      February         28.0   \n",
+       "2           0.0  Orchard      December           May         22.0   \n",
+       "3           0.0  Orchard       October     September          2.0   \n",
+       "4           0.0  Orchard      February      February          7.0   \n",
+       "...         ...      ...           ...           ...          ...   \n",
+       "119386      0.0   Changi       October         March         17.0   \n",
+       "119387      0.0   Changi        August          June          2.0   \n",
+       "119388      0.0   Changi       January          July          1.0   \n",
+       "119389      0.0   Changi       January           May         26.0   \n",
+       "119390      0.0   Changi        August          June         12.0   \n",
+       "\n",
+       "       checkout_month  checkout_day    country first_time    room  \\\n",
+       "0                 May          20.0      China        Yes    King   \n",
+       "1               March          -4.0      India        Yes    None   \n",
+       "2                 May          24.0  Australia        Yes  Single   \n",
+       "3           September           4.0      China        Yes    None   \n",
+       "4            February           8.0      China        Yes    King   \n",
+       "...               ...           ...        ...        ...     ...   \n",
+       "119386          March          19.0      China        Yes    King   \n",
+       "119387           June           3.0  Indonesia        Yes    King   \n",
+       "119388           July           3.0  Indonesia        Yes    King   \n",
+       "119389            May          29.0  Indonesia        Yes    King   \n",
+       "119390           June          13.0      India        Yes    King   \n",
+       "\n",
+       "              price platform num_adults  num_children  \n",
+       "0              None    Email          2           1.0  \n",
+       "1       USD$ 723.34    Email          1           0.0  \n",
+       "2       SGD$ 650.94  Website          1           0.0  \n",
+       "3       SGD$ 978.67    Agent          1           1.0  \n",
+       "4              None  Website          1           2.0  \n",
+       "...             ...      ...        ...           ...  \n",
+       "119386  SGD$ 953.94    Email          2           1.0  \n",
+       "119387  USD$ 636.84    Email          1           1.0  \n",
+       "119388         None  Website          1           0.0  \n",
+       "119389   USD$ 720.1    Email          1           1.0  \n",
+       "119390  SGD$ 898.62    Phone          1           0.0  \n",
+       "\n",
+       "[119391 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -44,18 +317,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 64-bit",
+   "display_name": "Python 3.7.4 ('aiap11')",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "71d8b8bb4a93ceea634a36dd0f8d5286ea09b9e4c8b045e23bba1493533ece29"
    }
   }
  },
