price conversion and standardisation

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[119391 rows x 14 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "115536       None           NaN  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "[21612 rows x 14 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
        "[24881 rows x 14 columns]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
        "max         1.000000      31.000000      31.000000       3.000000"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1286,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
        "array(['2', '1', 'one', 'two'], dtype=object)"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1342,13 +1342,351 @@
        "       'SGD$ 1245.56', 'SGD$ 953.94'], dtype=object)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['price'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It seems that there are several currencies used when recording price. Unsure how many so will have to check. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([None, 'USD$', 'SGD$'], dtype=object)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_currency = df['price'].str[:4]\n",
+    "df_currency.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that there are 2 currencies being used to record price. We want this to be all consistent. Based on the **branch** options, the hotel chain's data was collected from Singapore. So we will use SGD as the currency and remove the 'SGD$' prefix. We will convert 'USD$' to 'SGD$' using the current exchange rate which is: 1.39 SGD$ = 1 USD$ (taken 15 June 8.45pm SG Time)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convertCurrencyStringToInt64(price):\n",
+    "    str(price).replace(\" \", \"\") #remove white spaces\n",
+    "    if str(price)[:4] == \"USD$\":\n",
+    "        return float(str(price)[4:]) *1.39 #multiply if price is in USD\n",
+    "    if str(price)[:4] == \"SGD$\":\n",
+    "        return float(str(price)[4:]) #price is in SGD\n",
+    "    return price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>no_show</th>\n",
+       "      <th>branch</th>\n",
+       "      <th>booking_month</th>\n",
+       "      <th>arrival_month</th>\n",
+       "      <th>arrival_day</th>\n",
+       "      <th>checkout_month</th>\n",
+       "      <th>checkout_day</th>\n",
+       "      <th>country</th>\n",
+       "      <th>first_time</th>\n",
+       "      <th>room</th>\n",
+       "      <th>price</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>num_adults</th>\n",
+       "      <th>num_children</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>July</td>\n",
+       "      <td>May</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>May</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>December</td>\n",
+       "      <td>February</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>March</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1005.4426</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>December</td>\n",
+       "      <td>May</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>May</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Single</td>\n",
+       "      <td>650.9400</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>October</td>\n",
+       "      <td>September</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>September</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>None</td>\n",
+       "      <td>978.6700</td>\n",
+       "      <td>Agent</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Orchard</td>\n",
+       "      <td>February</td>\n",
+       "      <td>February</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>February</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119386</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>October</td>\n",
+       "      <td>March</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>March</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>China</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>953.9400</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119387</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>August</td>\n",
+       "      <td>June</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>June</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>885.2076</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119388</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>January</td>\n",
+       "      <td>July</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>July</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Website</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119389</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>January</td>\n",
+       "      <td>May</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>May</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>1000.9390</td>\n",
+       "      <td>Email</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119390</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Changi</td>\n",
+       "      <td>August</td>\n",
+       "      <td>June</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>June</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>King</td>\n",
+       "      <td>898.6200</td>\n",
+       "      <td>Phone</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>119390 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        no_show   branch booking_month arrival_month  arrival_day  \\\n",
+       "0           1.0   Changi          July           May         19.0   \n",
+       "1           0.0  Orchard      December      February         28.0   \n",
+       "2           0.0  Orchard      December           May         22.0   \n",
+       "3           0.0  Orchard       October     September          2.0   \n",
+       "4           0.0  Orchard      February      February          7.0   \n",
+       "...         ...      ...           ...           ...          ...   \n",
+       "119386      0.0   Changi       October         March         17.0   \n",
+       "119387      0.0   Changi        August          June          2.0   \n",
+       "119388      0.0   Changi       January          July          1.0   \n",
+       "119389      0.0   Changi       January           May         26.0   \n",
+       "119390      0.0   Changi        August          June         12.0   \n",
+       "\n",
+       "       checkout_month  checkout_day    country first_time    room      price  \\\n",
+       "0                 May          20.0      China        Yes    King        NaN   \n",
+       "1               March          -4.0      India        Yes    None  1005.4426   \n",
+       "2                 May          24.0  Australia        Yes  Single   650.9400   \n",
+       "3           September           4.0      China        Yes    None   978.6700   \n",
+       "4            February           8.0      China        Yes    King        NaN   \n",
+       "...               ...           ...        ...        ...     ...        ...   \n",
+       "119386          March          19.0      China        Yes    King   953.9400   \n",
+       "119387           June           3.0  Indonesia        Yes    King   885.2076   \n",
+       "119388           July           3.0  Indonesia        Yes    King        NaN   \n",
+       "119389            May          29.0  Indonesia        Yes    King  1000.9390   \n",
+       "119390           June          13.0      India        Yes    King   898.6200   \n",
+       "\n",
+       "       platform  num_adults  num_children  \n",
+       "0         Email           2           1.0  \n",
+       "1         Email           1           0.0  \n",
+       "2       Website           1           0.0  \n",
+       "3         Agent           1           1.0  \n",
+       "4       Website           1           2.0  \n",
+       "...         ...         ...           ...  \n",
+       "119386    Email           2           1.0  \n",
+       "119387    Email           1           1.0  \n",
+       "119388  Website           1           0.0  \n",
+       "119389    Email           1           1.0  \n",
+       "119390    Phone           1           0.0  \n",
+       "\n",
+       "[119390 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['price'] = df['price'].apply(convertCurrencyStringToInt64)\n",
+    "df"
    ]
   },
   {
