adding comments for functions

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2671,6 +2671,10 @@
    "source": [
     "month_list = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
     "def bookedMonthsBefore(booked_month: str, checkIn_month: str):\n",
+    "    '''\n",
+    "    this function will return the number of months between 2 given months inclusive of earlier month. Assumed that the difference is less than 1 year \n",
+    "    and that the first variable is the earlier month and the second variable is later month.\n",
+    "    '''\n",
     "    x = month_list.index(booked_month)\n",
     "    y = month_list.index(checkIn_month)\n",
     "    if y >= x:\n",
@@ -2852,14 +2856,18 @@
    ],
    "source": [
     "def lengthStayBooked(arrival_day: float, arrival_month: str, checkout_day: float, checkout_month: str):\n",
+    "    '''\n",
+    "    this function takes in 4 inputs a earlier date and month (1st and second input) and a later date and month (3rd and 4th input). It will calculate the number of days between the 2 date and month pairs. \n",
+    "    It assumes that there is no leap year unless a leap year date (29 feb) is given in the earlier date and month\n",
+    "    '''\n",
     "    leap_year = False\n",
     "    x = month_list.index(arrival_month)\n",
     "    y = month_list.index(checkout_month)\n",
-    "    if (arrival_month == 'February') and (arrival_day == float(29)):\n",
+    "    if (arrival_month == 'February') and (arrival_day == float(29)): #only check for (arrival_month and arrival_day) as we know (checkout_day and checkout_month) does not have any leap year entries from above\n",
     "        leap_year = True\n",
     "    if leap_year == True:\n",
     "        if y >=x:\n",
-    "            delta = date(2020, month_list.index(checkout_month) + 1, int(checkout_day)) - date(2020, month_list.index(arrival_month) + 1, int(arrival_day))\n",
+    "            delta = date(2020, month_list.index(checkout_month) + 1, int(checkout_day)) - date(2020, month_list.index(arrival_month) + 1, int(arrival_day)) #2020 was a leap year\n",
     "            return delta.days\n",
     "        else: \n",
     "            delta = date(2020, month_list.index(checkout_month) + 1, int(checkout_day)) - date(2019, month_list.index(arrival_month) + 1, int(arrival_day))\n",
@@ -2872,7 +2880,7 @@
     "            delta = date(2022, month_list.index(checkout_month) + 1, int(checkout_day)) - date(2021, month_list.index(arrival_month) + 1, int(arrival_day))\n",
     "            return delta.days\n",
     "df['length_stay_booked'] = df.apply(lambda x: lengthStayBooked(x['arrival_day'], x['arrival_month'], x['checkout_day'], x['checkout_month']), axis=1)\n",
-    "df[['arrival_day', 'arrival_month', 'checkout_day', 'checkout_month', 'length_stay_booked']]\n"
+    "df[['arrival_day', 'arrival_month', 'checkout_day', 'checkout_month', 'length_stay_booked']]"
    ]
   }
  ],
