--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "[119391 rows x 14 columns]"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "115536       None           NaN  "
       ]
      },
-     "execution_count": 281,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        "[21612 rows x 14 columns]"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
        "[24881 rows x 14 columns]"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1269,7 +1269,7 @@
        "max         1.000000      31.000000      31.000000       3.000000"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
        "array(['2', '1', 'one', 'two'], dtype=object)"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
        "       'SGD$ 1245.56', 'SGD$ 953.94'], dtype=object)"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
        "array([None, 'USD$', 'SGD$'], dtype=object)"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
@@ -1426,7 +1426,7 @@
        "array([None, 'USD', 'SGD'], dtype=object)"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1457,7 @@
        "       27., 28., 29., 30., 31.])"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
        "array([0., 1., 2., 3.])"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1502,7 @@
        "        25.,  26.,  27.,  28.,  29.,  30.,  31.])"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
        "[5696 rows x 15 columns]"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1835,7 @@
        "array(['Changi', 'Orchard'], dtype=object)"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1869,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
        "array(['Changi', 'Orchard'], dtype=object)"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1905,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
        "       'DecEMber'], dtype=object)"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1958,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1969,7 +1969,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1988,7 +1988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2020,7 @@
        "       'Malaysia'], dtype=object)"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2041,7 @@
        "array(['Yes', 'No'], dtype=object)"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2052,7 +2052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -2340,7 +2340,7 @@
        "[119390 rows x 15 columns]"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [
     {
@@ -2518,7 +2518,7 @@
        "5003           0.0              USD  "
       ]
      },
-     "execution_count": 308,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2531,7 +2531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tells us that one of the years where the data was collected was a leap year!"
+    "This tells us that some of the years where the data was collected were leap years! (as we don't know over how long this data was collected so cannot assume its all in the same year)"
    ]
   },
   {
@@ -2540,12 +2540,12 @@
    "source": [
     "All the nominal features seem to have no issues now. I will now add in 2 additional columns that I think will be interesting to do analysis on/with. They are:  \n",
     "&emsp; 1. The number of months between booking and check in. I will be assuming that if a room is booked in an earlier month than arrival_month it was made in the same year and if a room is booked in a later month than arrival_month, the booking was made the previous year. If booking_month and arrival_month are the same, will be assuming that the booking was made in the same month as arrival (i.e not the previous year). Will be creating a new feature called **booked_months_before** for this.  \n",
-    "&emsp; 2. The number of days the customer booked to stay at the hotel. Will be assuming that the customer does not stay more than a year. Will be creating a new feature called **length_stay_booked** for this. "
+    "&emsp; 2. The number of days the customer booked to stay at the hotel. Will be assuming that no customer stays more than a year. Will be creating a new feature called **days_booked** for this. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -2663,7 +2663,7 @@
        "[119390 rows x 3 columns]"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2694,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -2722,7 +2722,7 @@
        "      <th>arrival_month</th>\n",
        "      <th>checkout_day</th>\n",
        "      <th>checkout_month</th>\n",
-       "      <th>length_stay_booked</th>\n",
+       "      <th>days_booked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2820,42 +2820,29 @@
        "</div>"
       ],
       "text/plain": [
-       "        arrival_day arrival_month  checkout_day checkout_month  \\\n",
-       "0              19.0           May          20.0            May   \n",
-       "1              28.0      February           4.0          March   \n",
-       "2              22.0           May          24.0            May   \n",
-       "3               2.0     September           4.0      September   \n",
-       "4               7.0      February           8.0       February   \n",
-       "...             ...           ...           ...            ...   \n",
-       "119386         17.0         March          19.0          March   \n",
-       "119387          2.0          June           3.0           June   \n",
-       "119388          1.0          July           3.0           July   \n",
-       "119389         26.0           May          29.0            May   \n",
-       "119390         12.0          June          13.0           June   \n",
-       "\n",
-       "        length_stay_booked  \n",
-       "0                        1  \n",
-       "1                        4  \n",
-       "2                        2  \n",
-       "3                        2  \n",
-       "4                        1  \n",
-       "...                    ...  \n",
-       "119386                   2  \n",
-       "119387                   1  \n",
-       "119388                   2  \n",
-       "119389                   3  \n",
-       "119390                   1  \n",
+       "        arrival_day arrival_month  checkout_day checkout_month  days_booked\n",
+       "0              19.0           May          20.0            May            1\n",
+       "1              28.0      February           4.0          March            4\n",
+       "2              22.0           May          24.0            May            2\n",
+       "3               2.0     September           4.0      September            2\n",
+       "4               7.0      February           8.0       February            1\n",
+       "...             ...           ...           ...            ...          ...\n",
+       "119386         17.0         March          19.0          March            2\n",
+       "119387          2.0          June           3.0           June            1\n",
+       "119388          1.0          July           3.0           July            2\n",
+       "119389         26.0           May          29.0            May            3\n",
+       "119390         12.0          June          13.0           June            1\n",
        "\n",
        "[119390 rows x 5 columns]"
       ]
      },
-     "execution_count": 313,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def lengthStayBooked(arrival_day: float, arrival_month: str, checkout_day: float, checkout_month: str):\n",
+    "def daysBooked(arrival_day: float, arrival_month: str, checkout_day: float, checkout_month: str):\n",
     "    '''\n",
     "    this function takes in 4 inputs a earlier date and month (1st and second input) and a later date and month (3rd and 4th input). It will calculate the number of days between the 2 date and month pairs. \n",
     "    It assumes that there is no leap year unless a leap year date (29 feb) is given in the earlier date and month\n",
@@ -2879,9 +2866,21 @@
     "        else: \n",
     "            delta = date(2022, month_list.index(checkout_month) + 1, int(checkout_day)) - date(2021, month_list.index(arrival_month) + 1, int(arrival_day))\n",
     "            return delta.days\n",
-    "df['length_stay_booked'] = df.apply(lambda x: lengthStayBooked(x['arrival_day'], x['arrival_month'], x['checkout_day'], x['checkout_month']), axis=1)\n",
-    "df[['arrival_day', 'arrival_month', 'checkout_day', 'checkout_month', 'length_stay_booked']]"
+    "df['days_booked'] = df.apply(lambda x: lengthStayBooked(x['arrival_day'], x['arrival_month'], x['checkout_day'], x['checkout_month']), axis=1)\n",
+    "df[['arrival_day', 'arrival_month', 'checkout_day', 'checkout_month', 'days_booked']]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have finished with feature engineering and the basic data cleaning we can move on to the fun stuff. The exploration!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
