--- a/eda.ipynb
+++ b/eda.ipynb
@@ -6809,13 +6809,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -6824,41 +6817,15 @@
     "&emsp; 2. country    \n",
     "&emsp; 3. booked_months_before   \n",
     "&emsp; 4. first_time   \n",
-    "&emsp; 5. room type  (kings, others) \n",
+    "&emsp; 5. room type\n",
     "&emsp; 1. arrival_month\n",
-    "&emsp; 1. num_kids (0-1, 2,3)      "
+    "&emsp; 1. num_kids   \n",
+    "This is because, these features are not correlated with each other very much. And, since no particular feature seems to be a good predictor of the target, choosing from the ones that have minimal correlation, will allow for us to minimise multicollinearity which will allow our model to perform better on unseen data. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 594,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['booking_id', 'no_show', 'branch', 'booking_month', 'arrival_month',\n",
-       "       'arrival_day', 'checkout_month', 'checkout_day', 'country',\n",
-       "       'first_time', 'room', 'price', 'platform', 'num_adults', 'num_children',\n",
-       "       'payment_currency', 'booked_months_before', 'days_booked', 'party_size',\n",
-       "       'ratio_adults_kids'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 594,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
